[gd_scene load_steps=13 format=1]

[ext_resource path="res://scenes/game/hud.gd" type="Script" id=1]
[ext_resource path="res://assets/on_game/hud/back hud 2.png" type="Texture" id=2]
[ext_resource path="res://assets/on_game/hud/duit.png" type="Texture" id=3]
[ext_resource path="res://assets/on_game/hud/pupuk.png" type="Texture" id=4]
[ext_resource path="res://assets/on_game/hud/pause.png" type="Texture" id=5]
[ext_resource path="res://assets/on_game/hud/toko.png" type="Texture" id=6]
[ext_resource path="res://assets/shops/air toko.png" type="Texture" id=7]
[ext_resource path="res://assets/shops/palm toko.png" type="Texture" id=8]
[ext_resource path="res://assets/shops/truk toko.png" type="Texture" id=9]
[ext_resource path="res://assets/shops/pabrik1 toko.png" type="Texture" id=10]
[ext_resource path="res://assets/shops/pabrik2 toko.png" type="Texture" id=11]
[ext_resource path="res://assets/hud.tres" type="DynamicFont" id=12]

[node name="hud" type="Node2D"]

process/pause_mode = 2
z/z = 1
script/script = ExtResource( 1 )

[node name="background" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="bg" type="Sprite" parent="background"]

transform/pos = Vector2( 510, 110 )
transform/scale = Vector2( 1.04294, 1 )
texture = ExtResource( 2 )

[node name="on-demand" type="Sprite" parent="background"]

transform/pos = Vector2( 390, 100 )
transform/scale = Vector2( 0.460123, 0.541742 )
texture = ExtResource( 2 )

[node name="koinhud" type="Sprite" parent="background"]

transform/pos = Vector2( 730, 100 )
transform/scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 3 )

[node name="pupukhud" type="Sprite" parent="background"]

transform/pos = Vector2( 90, 100 )
transform/scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 4 )

[node name="hud_tombol" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="pause_button" type="TextureButton" parent="hud_tombol"]

visibility/behind_parent = true
rect/scale = Vector2( 0.15, 0.15 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 870.0
margin/top = 30.0
margin/right = 1321.0
margin/bottom = 400.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="shopButton" type="TextureButton" parent="hud_tombol"]

visibility/behind_parent = true
rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 850.0
margin/top = 110.0
margin/right = 1457.0
margin/bottom = 514.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="air" type="TextureButton" parent="hud_tombol"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 190.0
margin/top = 70.0
margin/right = 361.0
margin/bottom = 209.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="sawit" type="TextureButton" parent="hud_tombol"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 370.0
margin/top = 70.0
margin/right = 541.0
margin/bottom = 210.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="truk" type="TextureButton" parent="hud_tombol"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 280.0
margin/top = 70.0
margin/right = 452.0
margin/bottom = 209.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="pabrik" type="TextureButton" parent="hud_tombol"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 460.0
margin/top = 70.0
margin/right = 632.0
margin/bottom = 209.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="pabrikAdv" type="TextureButton" parent="hud_tombol"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 550.0
margin/top = 70.0
margin/right = 722.0
margin/bottom = 209.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="txtAir" type="Label" parent="hud_tombol"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 200.0
margin/top = 120.0
margin/right = 230.0
margin/bottom = 150.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
valign = 3
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="txtSawit" type="Label" parent="hud_tombol"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 380.0
margin/top = 120.0
margin/right = 410.0
margin/bottom = 150.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
valign = 3
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="txtTruk" type="Label" parent="hud_tombol"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 290.0
margin/top = 120.0
margin/right = 320.0
margin/bottom = 150.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
valign = 3
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="txtPabrik" type="Label" parent="hud_tombol"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 470.0
margin/top = 120.0
margin/right = 500.0
margin/bottom = 150.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
valign = 3
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="txtPabrikAdv" type="Label" parent="hud_tombol"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 560.0
margin/top = 120.0
margin/right = 590.0
margin/bottom = 150.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
valign = 3
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="txtPupuk" type="Label" parent="hud_tombol"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 74.0
margin/top = 84.0
margin/right = 144.0
margin/bottom = 116.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="txtUang" type="Label" parent="hud_tombol"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 640.0
margin/top = 83.0
margin/right = 770.0
margin/bottom = 113.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="hud_tombol/pause_button" to="." method="_on_pause_button_pressed"]

[connection signal="pressed" from="hud_tombol/shopButton" to="." method="_on_shopButton_pressed"]


